--- a/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Samples/Samples.csproj
+++ b/Main/Source/ExtendedWPFToolkitSolution/Src/Samples/Samples/Samples.csproj
@@ -115,6 +115,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Resources\TextBlockStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\TreeViewStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
